--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,12 @@
 
       <div class="p-8 md:p-0 mt-2 md:mt-6">
         <h1
-          class="relative text-4xl md:text-6xl font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5"
+          class="relative text-3xl md:text-6xl font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5"
         >
           Come to the Festival!
         </h1>
         <h1
-          class="relative text-7xl -top-3 md:text-8xl text-hat font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-14 md:w-[120%] md:-right-10"
+          class="relative leading-[0.85] mt-2 md:mt-0 text-[5rem] -top-3 md:text-8xl text-hat font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-14 md:w-[120%] md:-right-10"
         >
           Vladimir Putin: Do Fuck Off
         </h1>
