--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
     />
     <meta name="author" content="@noeltock" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:image" content="https://vpdfo.org/og.jpg" />
     <link rel="icon" type="image/png" href="ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
