--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,22 @@
     />
     <meta name="author" content="@noeltock" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta property="og:image" content="https://vpdfo.org/og.jpg" />
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://vpdfo.org/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="#VPDFO! Festival 2023">
+    <meta property="og:description" content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!">
+    <meta property="og:image" content="https://vpdfo.org/og.jpg">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="vpdfo.org">
+    <meta property="twitter:url" content="https://vpdfo.org/">
+    <meta name="twitter:title" content="#VPDFO! Festival 2023">
+    <meta name="twitter:description" content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!">
+    <meta name="twitter:image" content="https://vpdfo.org/og.jpg">
+        
     <link rel="icon" type="image/png" href="ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
