--- a/src/index.html
+++ b/src/index.html
@@ -1,170 +1,213 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-SLNV7GLXM4"></script>
     <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        window.dataLayer = window.dataLayer || [];
 
-      gtag('config', 'G-SLNV7GLXM4');
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag("js", new Date());
+        gtag("config", "G-SLNV7GLXM4");
     </script>
     <meta charset="utf-8" />
     <title>#VPDFO! Festival 2023</title>
-    <meta
-      name="description"
-      content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!"
-    />
+    <meta name="description" content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!" />
     <meta name="author" content="@noeltock" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Facebook Meta Tags -->
-    <meta property="og:url" content="https://vpdfo.org/">
-    <meta property="og:type" content="website">
-    <meta property="og:title" content="#VPDFO! Festival 2023">
-    <meta property="og:description" content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!">
-    <meta property="og:image" content="https://vpdfo.org/og.jpg">
+    <meta property="og:url" content="https://vpdfo.org/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="#VPDFO! Festival 2023" />
+    <meta property="og:description" content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!" />
+    <meta property="og:image" content="https://vpdfo.org/og.jpg" />
 
     <!-- Twitter Meta Tags -->
-    <meta name="twitter:card" content="summary_large_image">
-    <meta property="twitter:domain" content="vpdfo.org">
-    <meta property="twitter:url" content="https://vpdfo.org/">
-    <meta name="twitter:title" content="#VPDFO! Festival 2023">
-    <meta name="twitter:description" content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!">
-    <meta name="twitter:image" content="https://vpdfo.org/og.jpg">
-        
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="vpdfo.org" />
+    <meta property="twitter:url" content="https://vpdfo.org/" />
+    <meta name="twitter:title" content="#VPDFO! Festival 2023" />
+    <meta name="twitter:description" content="Oct 6-8 2023 in Kyiv — Livestream also available. Join us!" />
+    <meta name="twitter:image" content="https://vpdfo.org/og.jpg" />
+
     <link rel="icon" type="image/png" href="ico.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Staatliches&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Staatliches&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
-  </head>
-  <body class="bg-gray-800 text-white font-inter">
+</head>
+
+<body class="bg-gray-800 text-white font-inter">
     <div class="container max-w-4xl mx-auto min-h-screen pb-10">
-      <div class="relative md:top-[-15px]">
-        <h1
-          class="absolute bg-hat leading-[0.95] px-6 top-[50%] -left-4 md:-left-14 z-10 text-8xl md:text-[15rem] text-gray-900 font-extrabold font-staat -skew-y-2 tracking-wide rounded-xl"
-        >
-          #VPDFO!
-        </h1>
-        <img class="-skew-y-2" src="putin_comp.jpg" />
-      </div>
-
-      <div class="p-8 md:p-0 mt-2 md:mt-6">
-        <h1
-          class="relative text-3xl md:text-6xl font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5"
-        >
-          Come to the Festival!
-        </h1>
-        <h1
-          class="relative leading-[0.85] mt-2 md:mt-0 text-[5rem] -top-3 md:text-8xl text-hat font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-14 md:w-[120%] md:-right-10"
-        >
-          Vladimir Putin: Do Fuck Off
-        </h1>
-        <p class="mt-6 text-xl leading-8">
-          Vladimir Putin is 71 on October 7. So we're staging the
-          #VladimirPutinDoFuckOff! festival in Kyiv celebrating Ukrainian bands,
-          music, comedy, fashion, food and fun:
-        </p>
-        <p class="mt-2 text-xl leading-9">
-          <strong>→ Friday, October 6th from 17:00</strong>, Location:
-          <a
-            class="text-hat underline"
-            href="https://goo.gl/maps/Ct4D6wSUf8Y64RMy5"
-            target="_blank"
-            >17, Vulytsya Tereshchenkivsʹka, 17Б.</a
-          >
-        </p>
-        <p class="mt-2 text-xl leading-9">
-          <strong>→ Saturday & Sunday, October 7-8th from 12:00</strong>,
-          Location:
-          <a
-            class="text-hat underline"
-            href="https://maps.app.goo.gl/E48xM9s4ewENKc4V9?g_st=ic"
-            target="_blank"
-            >Cult Motive, Naberezhno-Khreshchatyts'k, 31/36</a
-          >
-        </p>
-
-        <h1
-          class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5"
-        >
-          Donate
-        </h1>
-
-        <div class="md:flex mt-5">
-          <div class="basis-1/2">
-            <h2 class="text-2xl font-bold mb-5 opacity-70">
-              → outside Ukraine 🌍
-            </h2>
-            <form
-              action="https://www.paypal.com/donate"
-              method="post"
-              target="_top"
-              id="donate"
-            >
-              <!-- Identify your business so that you can collect the payments. -->
-              <input
-                type="hidden"
-                name="business"
-                value="sweeneyjohn@hotmail.co.uk"
-              />
-              <!-- Specify details about the contribution -->
-              <input type="hidden" name="amount" value="36" />
-              <input type="hidden" name="no_recurring" value="0" />
-              <input
-                type="hidden"
-                name="item_name"
-                value="#VPDFO! Festival 2023"
-              />
-              <input type="hidden" name="currency_code" value="USD" />
-              <!-- Display the payment button. -->
-              <img
-                alt=""
-                width="1"
-                height="1"
-                src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif"
-              />
-            </form>
-            <button
-              type="submit"
-              form="donate"
-              class="block w-full bg-hat hover:bg-orange-400 text-white text-lg font-bold py-2 px-4 rounded"
-            >
-              3-Day Livestream Access<br />
-              Donate $36
-            </button>
-            <p class="mt-5 leading-6">
-              You can donate via PayPal, please use the amount corresponding to
-              the best currency for you. Smaller amounts are also welcome if you
-              just want to show support!
-            </p>
-          </div>
-          <div class="basis-1/12">&nbsp;</div>
-          <div class="basis-1/2">
-            <h2 class="text-2xl font-bold mb-5 opacity-70">
-              → inside Ukraine 🇺🇦
-            </h2>
-            <div
-              class="block w-full text-center bg-hat text-white text-lg  py-2 px-4 rounded"
-            >
-            <strong>Buy a ticket to attend in-person</strong> <br />Coming soon
-            </div>
-            <p class="mt-5 leading-6">
-              You can also buy a ticket at the door on the day.
-            </p>
-          </div>
+        <div class="relative md:top-[-15px]">
+            <h1 class="absolute bg-hat leading-[0.95] px-6 top-[50%] -left-4 md:-left-14 z-10 text-8xl md:text-[15rem] text-gray-900 font-extrabold font-staat -skew-y-2 tracking-wide rounded-xl">
+                #VPDFO!
+            </h1>
+            <img class="-skew-y-2" src="putin_comp.jpg" />
         </div>
 
-        <hr class="mt-10 opacity-50" />
-        <p class="mt-3 text-l leading-7 opacity-50">
-          This event is organised by the VPDFO! team. <strong>100% of profits</strong> go to charities supporting Ukraine.
-        </p>
-      </div>
+        <div class="p-8 md:p-0 mt-2 md:mt-6">
+            <h1 class="relative text-3xl md:text-6xl font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
+                Come to the Festival!
+            </h1>
+            <h1 class="relative leading-[0.85] mt-2 md:mt-0 text-[5rem] -top-3 md:text-8xl text-hat font-extrabold font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-14 md:w-[120%] md:-right-10">
+                Vladimir Putin: Do Fuck Off
+            </h1>
+            <p class="mt-6 text-xl leading-8">
+                Vladimir Putin is 71 on October 7. So we're staging the
+                #VladimirPutinDoFuckOff! festival in Kyiv celebrating Ukrainian bands,
+                music, comedy, fashion, food and fun:
+            </p>
+            <p class="mt-2 text-xl leading-9">
+                <strong>→ Friday, October 6th from 17:00</strong>, Location:
+                <a class="text-hat underline" href="https://goo.gl/maps/Ct4D6wSUf8Y64RMy5" target="_blank">17, Vulytsya Tereshchenkivsʹka, 17Б.</a>
+            </p>
+            <p class="mt-2 text-xl leading-9">
+                <strong>→ Saturday & Sunday, October 7-8th from 12:00</strong>,
+                Location:
+                <a class="text-hat underline" href="https://maps.app.goo.gl/E48xM9s4ewENKc4V9?g_st=ic" target="_blank">Cult Motive, Naberezhno-Khreshchatyts'k, 31/36</a>
+            </p>
+
+            <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-5">
+                Schedule
+            </h1>
+
+            <div class="md:flex">
+
+                <div class="flex-1 bg-[rgba(47,65,91,0.3)] md:mr-[2%] p-5 rounded">
+                    <h2 class="text-2xl font-bold mb-5 underline decoration-sky-500 decoration-2 underline-offset-4 text-center md:text-left">
+                        Saturday, October 7th
+                    </h2>
+                    <div class="grid grid-cols-2 md:grid-cols-3 gap-y-3">
+                        <div class="font-bold col-span-1">12:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0">Charitable fair “Luty” starts</div>
+
+                        <div class="font-bold col-span-1">12:00 - 13:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0">Lowcost49</div>
+                        <div class="font-bold col-span-1">13:00 - 14:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Poetry:</strong> Kolya Kulinich and Yurii Smalius</div>
+                        <div class="font-bold col-span-1">14:00 - 14:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Poetry:</strong> Yana Marinenko</div>
+                        <div class="font-bold col-span-1">14:00 - 17:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Cooking:</strong> How to cook Ukrainian borsch?</div>
+                        <div class="font-bold col-span-1">14:30 - 15:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Talk:</strong>
+                            <div><strong>Photographing the war.</strong> Participants: Christopher Occhicone, Paul Conroy, Yevhen Zavgorodniy, Zoya Shu, John Sweeney.</div>
+                            <div>The work of stabilization hospital: ex-head of stabilization hospital in Chasiv Yar, Ukrainian wounded soldiers</div>
+                        </div>
+                        <div class="font-bold col-span-1">16:00 - 16:45</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Art performance:</strong> Dee Posh</div>
+                        <div class="font-bold col-span-1">17:00 - 18:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Music:</strong> The Edge Band</div>
+                        <div class="font-bold col-span-1">18:30 - 19:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Standup:</strong> Bohdan Vakhnych</div>
+                        <div class="font-bold col-span-1">19:00 - 19:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Standup:</strong> Раміль Янгулов</div>
+                        <div class="font-bold col-span-1">20:00 - 21:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Music:</strong> Motor’Rolla</div>
+                    </div>
+
+                </div>
+
+                <div class="flex-1 bg-[rgba(47,65,91,0.3)] p-5 rounded">
+                    <h2 class="text-2xl font-bold mb-5 underline decoration-sky-500 decoration-2 underline-offset-4 text-center md:text-left">
+                        Sunday, October 8th
+                    </h2>
+                    <div class="grid grid-cols-2 md:grid-cols-3 gap-y-3">
+                        <div class="font-bold col-span-1">12:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0">Charitable fair “Luty” starts</div>
+                        <div class="font-bold col-span-1">13:00 - 14:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Poetry:</strong> Anatoly Dnistrovy, Marina Ponomarenko, Maryna Tseluiko</div>
+                        <div class="font-bold col-span-1">14:30 - 15:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Talk: Putin's Prisoners</strong> Shaun Pinner, Yaroslav Lodygin, Dima Kovalchuk, Mariia Chepa John Sweeney</div>
+                        <div class="font-bold col-span-1">15:00 - 16:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Music:</strong> ЩукаРиба (ShukaRyba)</div>
+                        <div class="font-bold col-span-1">20:00 - 21:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Fashion Show:</strong> by Anna Zakletska</div>
+                        <div class="font-bold col-span-1">17:00 - 18:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Music:</strong> Dislocados</div>
+                        <div class="font-bold col-span-1">18:00 - 18:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Standup:</strong> Max Vyshinskyi</div>
+                        <div class="font-bold col-span-1">18:30 - 19:00</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Standup:</strong> Андрій Бережко (Andrii Berezhko)</div>
+                        <div class="font-bold col-span-1">19:00 - 20:30</div>
+                        <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Music:</strong> NAZVA</div>
+                    </div>
+
+                </div>
+
+            </div>
+            <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
+                Donate
+            </h1>
+
+            <div class="md:flex mt-5">
+                <div class="basis-1/2">
+                    <h2 class="text-2xl font-bold mb-5 opacity-70">
+                        → outside Ukraine 🌍
+                    </h2>
+                    <form action="https://www.paypal.com/donate" method="post" target="_top" id="donate">
+                        <!-- Identify your business so that you can collect the payments. -->
+                        <input type="hidden" name="business" value="sweeneyjohn@hotmail.co.uk" />
+                        <!-- Specify details about the contribution -->
+                        <input type="hidden" name="amount" value="36" />
+                        <input type="hidden" name="no_recurring" value="0" />
+                        <input type="hidden" name="item_name" value="#VPDFO! Festival 2023" />
+                        <input type="hidden" name="currency_code" value="USD" />
+                        <!-- Display the payment button. -->
+                        <img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" />
+                    </form>
+                    <button type="submit" form="donate" class="block w-full bg-hat hover:bg-orange-400 text-white text-lg font-bold py-2 px-4 rounded leading-6">
+                        3-Day Livestream Access<br />
+                        Donate $36
+                    </button>
+                    <p class="mt-5 leading-6">
+                        You can donate via PayPal, please use the amount corresponding to
+                        the best currency for you. Smaller amounts are also welcome if you
+                        just want to show support!
+                    </p>
+                </div>
+                <div class="basis-1/12">&nbsp;</div>
+                <div class="basis-1/2">
+                    <h2 class="text-2xl font-bold mb-5 opacity-70">
+                        → inside Ukraine 🇺🇦
+                    </h2>
+                    <div class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
+                        <strong>Buy a ticket to attend in-person</strong> <br />Coming
+                        soon
+                    </div>
+                    <p class="mt-5 leading-6">
+                        You can also buy a ticket at the door on the day.
+                    </p>
+                </div>
+            </div>
+
+            <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-8">
+                Charities
+            </h1>
+
+            <div class="grid grid-cols-1 md:grid-cols-3 gap-y-6 text-xl text-center">
+                <a class="text-hat underline underline-offset-4" href="https://kyivstar.ua/safehome">Demining Project</a>
+                <a class="text-hat underline underline-offset-4" href="https://www.hospitallers.life/">Hospitaliers</a>
+                <a class="text-hat underline underline-offset-4" href="https://instagram.com/use_your_name?igshid=MzRlODBiNWFlZA==">Tourniquets</a>
+                <a class="text-hat underline underline-offset-4" href="https://lifelineukraine.com/">Lifeline Ukraine</a>
+                <a class="text-hat underline underline-offset-4" href=" https://superhumans.com/en/">Superhumans</a>
+                <a class="text-hat underline underline-offset-4" href="https://www.madfoundation.com/ ">Operation Safedrop</a>
+                <a class="text-hat underline underline-offset-4" href="https://instagram.com/doghelpkharkivua?igshid=MzRlODBiNWFlZA==">Animal Help Kharkiv</a>
+                <a class="text-hat underline underline-offset-4" href="#">Medics: Field Hospital outside Bakhmut</a>
+            </div>
+
+            <hr class="mt-10 opacity-50" />
+            <p class="mt-3 text-l leading-7 opacity-50">
+                This event is organised by the VPDFO! team.
+                <strong>100% of profits</strong> go to charities supporting Ukraine.
+            </p>
+        </div>
     </div>
-  </body>
+</body>
+
 </html>
