--- a/src/index.html
+++ b/src/index.html
@@ -157,8 +157,8 @@
                         <!-- Display the payment button. -->
                         <img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" />
                     </form>
-                    <button type="submit" form="donate" class="block w-full bg-hat hover:bg-orange-400 text-white text-lg font-bold py-2 px-4 rounded leading-6">
-                        3-Day Livestream Access<br />
+                    <button type="submit" form="donate" class="block w-full bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6">
+                        <strong>3-Day Livestream Access</strong><br />
                         Donate $36
                     </button>
                     <p class="mt-5 leading-6">
@@ -172,10 +172,9 @@
                     <h2 class="text-2xl font-bold mb-5 opacity-70">
                         → inside Ukraine 🇺🇦
                     </h2>
-                    <div class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
-                        <strong>Buy a ticket to attend in-person</strong> <br />Coming
-                        soon
-                    </div>
+                    <a href="https://concert.ua/uk/event/vpdfo" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
+                        <strong>Buy a ticket to attend in-person</strong> <br/> From 400 UAH
+                    </a>
                     <p class="mt-5 leading-6">
                         You can also buy a ticket at the door on the day.
                     </p>
