--- a/src/index.html
+++ b/src/index.html
@@ -122,7 +122,7 @@
                         <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Talk: Putin's Prisoners</strong> Shaun Pinner, Yaroslav Lodygin, Dima Kovalchuk, Mariia Chepa John Sweeney</div>
                         <div class="font-bold col-span-1">15:00 - 16:30</div>
                         <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Music:</strong> ЩукаРиба (ShukaRyba)</div>
-                        <div class="font-bold col-span-1">20:00 - 21:30</div>
+                        <div class="font-bold col-span-1">16:30 - 17:00</div>
                         <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Fashion Show:</strong> by Anna Zakletska</div>
                         <div class="font-bold col-span-1">17:00 - 18:00</div>
                         <div class="relative text-hat col-span-2 -top-2 md:top-0"><strong>Music:</strong> Dislocados</div>
@@ -137,13 +137,16 @@
                 </div>
 
             </div>
+
+            <p class="p-5"><span class="text-hat">Photo exhibition <strong>“Life and death in stabilization hospital in Chasiv Yar”</strong></span>, Christopher Occhicone (USA), Exhibition will last until October 15th</p>
+            <p class="px-5"><span class="text-hat">Collective photo exhibition <strong>“Dimensions of war”</strong></span>. Participants: Zoya Shu, Yevhen Zavgorodniy, Maryna Khomenko (Ukraine), Kate Fim (USA), Svetlana Melik-Nubarova (Kazakhstan-Turkey). Exhibition will last until October 15th</p>
             <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
                 Donate
             </h1>
 
             <div class="md:flex mt-5">
                 <div class="basis-1/2">
-                    <h2 class="text-2xl font-bold mb-5 opacity-70">
+                    <h2 class="text-2xl font-bold mb-5">
                         → outside Ukraine 🌍
                     </h2>
                     <form action="https://www.paypal.com/donate" method="post" target="_top" id="donate">
@@ -169,7 +172,7 @@
                 </div>
                 <div class="basis-1/12">&nbsp;</div>
                 <div class="basis-1/2">
-                    <h2 class="text-2xl font-bold mb-5 opacity-70">
+                    <h2 class="text-2xl font-bold mb-5">
                         → inside Ukraine 🇺🇦
                     </h2>
                     <a href="https://concert.ua/uk/event/vpdfo" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
