--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,10 @@
             <h1 class="absolute bg-hat leading-[0.95] px-6 top-[50%] -left-4 md:-left-14 z-10 text-8xl md:text-[15rem] text-gray-900 font-extrabold font-staat -skew-y-2 tracking-wide rounded-xl">
                 #VPDFO!
             </h1>
+            <div class="absolute bg-hat shadow-2xl top-5 right-4 md:top-10 md:right-8 z-10 leading-none py-2 px-4 rounded-2xl">
+                <a href="#"><img class="w-16 inline-block mr-2" src="flag-uk.png" /></a>
+                <a href="ua.html"><img class="w-16 inline-block" src="flag-ua.png" /></a>
+            </div>
             <img class="-skew-y-2" src="putin_comp.jpg" />
         </div>
 
@@ -141,7 +145,7 @@
             <p class="p-5"><span class="text-hat">Photo exhibition <strong>“Life and death in stabilization hospital in Chasiv Yar”</strong></span>, Christopher Occhicone (USA), Exhibition will last until October 15th</p>
             <p class="px-5"><span class="text-hat">Collective photo exhibition <strong>“Dimensions of war”</strong></span>. Participants: Zoya Shu, Yevhen Zavgorodniy, Maryna Khomenko (Ukraine), Kate Fim (USA), Svetlana Melik-Nubarova (Kazakhstan-Turkey). Exhibition will last until October 15th</p>
             <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
-                Donate
+                Tickets
             </h1>
 
             <div class="md:flex mt-5">
@@ -176,12 +180,43 @@
                         → inside Ukraine 🇺🇦
                     </h2>
                     <a href="https://concert.ua/uk/event/vpdfo" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
-                        <strong>Buy a ticket to attend in-person</strong> <br/> From 400 UAH
+                        <strong>Buy a ticket to attend in-person</strong> <br /> From 400 UAH
                     </a>
                     <p class="mt-5 leading-6">
                         You can also buy a ticket at the door on the day.
                     </p>
                 </div>
+            </div>
+
+            <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
+                MERCH
+            </h1>
+            <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
+              <div class="relative">
+                <img src="o_combo.JPG" />
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>
+              </div>
+              <div class="relative">
+                <img src="o_tee.JPG" />
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPDFO! Tee Orange</strong><br />£19 / 800 UAH</div>
+              </div>
+              <div class="relative">
+                <img src="o_hood.JPG" />
+                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPDFO! Hoodie Orange</strong><br />£29 / 1250 UAH</div>
+              </div>
+              <div class="relative">
+                <img src="b_hat.JPG" />
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPHFO! Hat Black</strong><br />£17.50 / 750 UAH</div>
+              </div>
+              <div class="relative">
+                <img src="b_combo.JPG" />
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPHFO! Tee Black</strong><br />£23 / 1000 UAH</div>
+              </div>
+              <div class="relative">
+                <img src="b_tee.JPG" />
+                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPHFO! Hoodie Black</strong><br />£35 / 1500 UAH</div>
+              </div>
             </div>
 
             <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-8">
