--- a/src/index.html
+++ b/src/index.html
@@ -195,27 +195,27 @@
             <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">
               <div class="relative">
                 <img src="o_combo.JPG" />
-                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>
               </div>
               <div class="relative">
                 <img src="o_tee.JPG" />
-                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPDFO! Tee Orange</strong><br />£19 / 800 UAH</div>
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Tee Orange</strong><br />£19 / 800 UAH</div>
               </div>
               <div class="relative">
                 <img src="o_hood.JPG" />
-                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPDFO! Hoodie Orange</strong><br />£29 / 1250 UAH</div>
+                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hoodie Orange</strong><br />£29 / 1250 UAH</div>
               </div>
               <div class="relative">
                 <img src="b_hat.JPG" />
-                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPHFO! Hat Black</strong><br />£17.50 / 750 UAH</div>
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hat Black</strong><br />£17.50 / 750 UAH</div>
               </div>
               <div class="relative">
                 <img src="b_combo.JPG" />
-                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPHFO! Tee Black</strong><br />£23 / 1000 UAH</div>
+                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Tee Black</strong><br />£23 / 1000 UAH</div>
               </div>
               <div class="relative">
                 <img src="b_tee.JPG" />
-                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 leading-6"><strong>#VPHFO! Hoodie Black</strong><br />£35 / 1500 UAH</div>
+                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hoodie Black</strong><br />£35 / 1500 UAH</div>
               </div>
             </div>
 
