--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
                 #VPDFO!
             </h1>
             <div class="absolute bg-hat shadow-2xl top-5 right-4 md:top-10 md:right-8 z-10 leading-none py-2 px-4 rounded-2xl">
-                <a href="#"><img class="w-16 inline-block mr-2" src="flag-uk.png" /></a>
+                <a href="https://vpdfo.org/"><img class="w-16 inline-block mr-2" src="flag-uk.png" /></a>
                 <a href="ua.html"><img class="w-16 inline-block" src="flag-ua.png" /></a>
             </div>
             <img class="-skew-y-2" src="putin_comp.jpg" />
