--- a/src/index.html
+++ b/src/index.html
@@ -145,13 +145,13 @@
             <p class="p-5"><span class="text-hat">Photo exhibition <strong>“Life and death in stabilization hospital in Chasiv Yar”</strong></span>, Christopher Occhicone (USA), Exhibition will last until October 15th</p>
             <p class="px-5"><span class="text-hat">Collective photo exhibition <strong>“Dimensions of war”</strong></span>. Participants: Zoya Shu, Yevhen Zavgorodniy, Maryna Khomenko (Ukraine), Kate Fim (USA), Svetlana Melik-Nubarova (Kazakhstan-Turkey). Exhibition will last until October 15th</p>
             <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
-                Tickets
+                Tickets & Livestream
             </h1>
 
             <div class="md:flex mt-5">
                 <div class="basis-1/2">
                     <h2 class="text-2xl font-bold mb-5">
-                        → outside Ukraine 🌍
+                        → PayPal
                     </h2>
                     <form action="https://www.paypal.com/donate" method="post" target="_top" id="donate">
                         <!-- Identify your business so that you can collect the payments. -->
@@ -177,13 +177,14 @@
                 <div class="basis-1/12">&nbsp;</div>
                 <div class="basis-1/2">
                     <h2 class="text-2xl font-bold mb-5">
-                        → inside Ukraine 🇺🇦
+                        → Crowdfunder
                     </h2>
                     <a href="https://concert.ua/uk/event/vpdfo" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
-                        <strong>Buy a ticket to attend in-person</strong> <br /> From 400 UAH
+                        <strong>3-Day Livestream Access</strong><br />
+                        Donate £30
                     </a>
                     <p class="mt-5 leading-6">
-                        You can also buy a ticket at the door on the day.
+                        You can also buy a ticket at the door on the day for 100 UAH.
                     </p>
                 </div>
             </div>
