--- a/src/index.html
+++ b/src/index.html
@@ -179,7 +179,7 @@
                     <h2 class="text-2xl font-bold mb-5">
                         → Crowdfunder
                     </h2>
-                    <a href="https://concert.ua/uk/event/vpdfo" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
+                    <a href="https://www.crowdfunder.co.uk/p/vpdfo-2023" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
                         <strong>3-Day Livestream Access</strong><br />
                         Donate £30
                     </a>
