--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
             <p class="p-5"><span class="text-hat">Photo exhibition <strong>“Life and death in stabilization hospital in Chasiv Yar”</strong></span>, Christopher Occhicone (USA), Exhibition will last until October 15th</p>
             <p class="px-5"><span class="text-hat">Collective photo exhibition <strong>“Dimensions of war”</strong></span>. Participants: Zoya Shu, Yevhen Zavgorodniy, Maryna Khomenko (Ukraine), Kate Fim (USA), Svetlana Melik-Nubarova (Kazakhstan-Turkey). Exhibition will last until October 15th</p>
             <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
-                Квитки та пряма трансляція
+                Tickets & Livestream
             </h1>
 
             <div class="md:flex mt-5">
@@ -165,12 +165,13 @@
                         <img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" />
                     </form>
                     <button type="submit" form="donate" class="block w-full bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6">
-                        <strong>Доступ до прямої трансляції на 2 дні</strong><br />
-                        Пожертвуйте $36
+                        <strong>2-Day Livestream Access</strong><br />
+                        Donate $36
                     </button>
                     <p class="mt-5 leading-6">
-                        Ви можете пожертвувати через PayPal, будь ласка, використовуйте суму, яка відповідає
-                        вашій найкращій валюті. Менші суми також вітаються, якщо ви просто хочете підтримати!
+                        You can donate via PayPal, please use the amount corresponding to
+                        the best currency for you. Smaller amounts are also welcome if you
+                        just want to show support!
                     </p>
                 </div>
                 <div class="basis-1/12">&nbsp;</div>
@@ -179,11 +180,11 @@
                         → Crowdfunder
                     </h2>
                     <a href="https://www.crowdfunder.co.uk/p/vpdfo-2023" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
-                        <strong>Доступ до прямої трансляції на 2 дні</strong><br />
-                        Пожертвуйте £30
+                        <strong>2-Day Livestream Access</strong><br />
+                        Donate £30
                     </a>
                     <p class="mt-5 leading-6">
-                        Ви також можете придбати квиток на вході в день заходу за 100 грн.
+                        You can also buy a ticket at the door on the day for 100 UAH.
                     </p>
                 </div>
             </div>
