--- a/src/ua.html
+++ b/src/ua.html
@@ -148,13 +148,13 @@
             <p class="p-5"><span class="text-hat">Фото виставка «Життя та смерть у стабілізаційному госпіталі у Часовому Яру»</span>, Хрістофер Оккіконе (США). Виставка триватиме до 15 жовтня.</p>
             <p class="px-5"><span class="text-hat">Фото виставка «Виміри війни»</span>. Учасники: Зоя Шу, Євгеній Завгородній, Марина Хоменко (Україна), Кейт Фім (США), Свєтлана Мелік-Нубарова (Казахстан-Туреччина). Виставка триватиме до 15 жовтня.</p>
             <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
-                Квитки
+                Квитки та пряма трансляція
             </h1>
 
             <div class="md:flex mt-5">
                 <div class="basis-1/2">
                     <h2 class="text-2xl font-bold mb-5">
-                        → за межами України 🌍
+                        → PayPal
                     </h2>
                     <form action="https://www.paypal.com/donate" method="post" target="_top" id="donate">
                         <!-- Identify your business so that you can collect the payments. -->
@@ -168,26 +168,26 @@
                         <img alt="" width="1" height="1" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" />
                     </form>
                     <button type="submit" form="donate" class="block w-full bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6">
-                        <strong>Доступ до онлайн-трансляції на 3 дні</strong><br />
-                        Пожертвувати $36
+                        <strong>Доступ до прямої трансляції на 2 дні</strong><br />
+                        Пожертвуйте $36
                     </button>
                     <p class="mt-5 leading-6">
-                        Ви можете пожертвувати через PayPal, будь ласка, виберіть суму відповідно до
-                        вашої валюти. Менші суми також вітаються, якщо ви просто хочете підтримати нас!
+                        Ви можете пожертвувати через PayPal, будь ласка, використовуйте суму, яка відповідає
+                        вашій найкращій валюті. Менші суми також вітаються, якщо ви просто хочете підтримати!
                     </p>
                 </div>
                 <div class="basis-1/12">&nbsp;</div>
                 <div class="basis-1/2">
                     <h2 class="text-2xl font-bold mb-5">
-                        → в Україні 🇺🇦
+                        → Crowdfunder
                     </h2>
-                    <a href="https://concert.ua/uk/event/vpdfo" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
-                        <strong>Купити квиток для участі особисто</strong> <br /> Від 400 грн.
+                    <a href="https://www.crowdfunder.co.uk/p/vpdfo-2023" class="block w-full text-center bg-hat text-white text-lg py-2 px-4 rounded leading-6">
+                        <strong>Доступ до прямої трансляції на 2 дні</strong><br />
+                        Пожертвуйте £30
                     </a>
                     <p class="mt-5 leading-6">
-                        Ви також можете купити квиток на вході в день заходу.
+                        Ви також можете придбати квиток на вході в день заходу за 100 грн.
                     </p>
-
                 </div>
             </div>
 
