2024 shorts v1.2 added gallery

--- a/src/index.html
+++ b/src/index.html
@@ -24,15 +24,15 @@
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="#VPDFO! Festival 2024"/>
     <meta property="og:description" content="Oct 5-6 2024 in Kyiv — Livestream also available. Join us!"/>
-    <meta property="og:image" content="https://vpdfo.org/og.jpg"/>
+    <meta property="og:image" content="https://vpdfo.org/background.jpeg"/>
 
     <!-- Twitter Meta Tags -->
     <meta name="twitter:card" content="summary_large_image"/>
     <meta property="twitter:domain" content="vpdfo.org"/>
     <meta property="twitter:url" content="https://vpdfo.org/"/>
-    <meta name="twitter:title" content="#VPDFO! Festival 204"/>
+    <meta name="twitter:title" content="#VPDFO! Festival 2024"/>
     <meta name="twitter:description" content="Oct 5-6 2024 in Kyiv — Livestream also available. Join us!"/>
-    <meta name="twitter:image" content="https://vpdfo.org/og.jpg"/>
+    <meta name="twitter:image" content="https://vpdfo.org/background.jpeg"/>
 
     <link rel="icon" type="image/png" href="ico.png"/>
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
@@ -41,8 +41,9 @@
           rel="stylesheet"/>
     <link href="https://fonts.cdnfonts.com/css/muller-next-expanded-trial" rel="stylesheet">
     <script src="https://cdn.hadronid.net/hadron.js?url=https%3A%2F%2Fbefonts.com%2Fmuller-next-font-family.html&amp;ref=https%3A%2F%2Fwww.google.com%2F&amp;_it=amazon&amp;partner_id=617"></script>
-    <link rel="stylesheet" href="styles.css?v=3"/>
-    <script defer src="script.js"></script>
+<!--    <link rel="stylesheet" href="main-styles.css?v=3"/>-->
+    <link rel="stylesheet" href="main-styles.css?v=5"/>
+    <script defer src="script.js?v=2"></script>
 </head>
 
 <body class="bg-gray-800 text-white font-inter">
@@ -247,97 +248,62 @@
 
             <div style="text-align:center; margin-top: 24px" class="text-hat">
                 450₴ for one day<br/>
-                700$ for two days
+                700₴ for two days
             </div>
         </h2>
 
 
-        <!--            <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">-->
-        <!--                MERCH-->
-        <!--            </h1>-->
-        <!--            <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
-        <!--            <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
-        <!--            </div>-->
+<!--                    <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">-->
+<!--                        MERCH-->
+<!--                    </h1>-->
+<!--                    <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
+<!--                    <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
+<!--                    </div>-->
 
-        <!--            <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">-->
-        <!--                GALLERY-->
-        <!--            </h1>-->
-        <!--            <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
-        <!--            <div id="gallery-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gallery-container">-->
+                    <h1 class="relative text-6xl font-extrabold mt-4 mb-8 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5">
+                        GALLERY
+                    </h1>
+<!--                    <p class="text-lg max-w-2xl mb-5">Support our cause by getting some limited gear, to order email <a class="text-hat underline" href="mailto:Merchvpdfo@gmail.com">Merchvpdfo@gmail.com</a> (+ £7.00 for shippig to UK)</p>-->
+<!--                    <div id="gallery-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gallery-container">-->
 
+                    <div id="gallery-container" class="gallery-container">
+<!--                        <div class="gallery-item relative">-->
+<!--                            <img class="protect-image" src="o_combo.JPG" />-->
+<!--                            <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
+<!--                            <div style="display: flex; justify-content: center">-->
+<!--                                <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
+<!--                                    Buy-->
+<!--                                </button>-->
+<!--                            </div>-->
+<!--                        </div>-->
+                    </div>
 
-        <!--                <div class="relative">-->
-        <!--                    <img src="o_combo.JPG" />-->
-        <!--                    <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-        <!--                    <div style="display: flex; justify-content: center">-->
-        <!--                        <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
-        <!--                            Buy-->
-        <!--                        </button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                <div class="relative">-->
-        <!--                    <img src="o_combo.JPG" />-->
-        <!--                    <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-        <!--                    <div style="display: flex; justify-content: center">-->
-        <!--                        <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
-        <!--                            Buy-->
-        <!--                        </button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                <div class="relative">-->
-        <!--                    <img src="o_combo.JPG" />-->
-        <!--                    <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-        <!--                    <div style="display: flex; justify-content: center">-->
-        <!--                        <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
-        <!--                            Buy-->
-        <!--                        </button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                <div class="relative">-->
-        <!--                    <img src="o_combo.JPG" />-->
-        <!--                    <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-        <!--                    <div style="display: flex; justify-content: center">-->
-        <!--                        <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
-        <!--                            Buy-->
-        <!--                        </button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--                <div class="relative">-->
-        <!--                    <img src="o_combo.JPG" />-->
-        <!--                    <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-        <!--                    <div style="display: flex; justify-content: center">-->
-        <!--                        <button type="submit" form="donate" class="block bg-hat hover:bg-orange-400 text-white text-lg py-2 px-4 rounded leading-6 w-full" style="width: 100%;">-->
-        <!--                            Buy-->
-        <!--                        </button>-->
-        <!--                    </div>-->
-        <!--                </div>-->
-        <!--            </div>-->
-        <!--            <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
-        <!--              <div class="relative">-->
-        <!--                <img src="o_combo.JPG" />-->
-        <!--                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
-        <!--              </div>-->
-        <!--              <div class="relative">-->
-        <!--                <img src="o_tee.JPG" />-->
-        <!--                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Tee Orange</strong><br />£19 / 800 UAH</div>-->
-        <!--              </div>-->
-        <!--              <div class="relative">-->
-        <!--                <img src="o_hood.JPG" />-->
-        <!--                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hoodie Orange</strong><br />£29 / 1250 UAH</div>-->
-        <!--              </div>-->
-        <!--              <div class="relative">-->
-        <!--                <img src="b_hat.JPG" />-->
-        <!--                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hat Black</strong><br />£17.50 / 750 UAH</div>-->
-        <!--              </div>-->
-        <!--              <div class="relative">-->
-        <!--                <img src="b_tee.JPG" />-->
-        <!--                <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Tee Black</strong><br />£23 / 1000 UAH</div>-->
-        <!--              </div>-->
-        <!--              <div class="relative">-->
-        <!--                <img src="b_combo.JPG" />-->
-        <!--                <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hoodie Black</strong><br />£35 / 1500 UAH</div>-->
-        <!--              </div>-->
-        <!--            </div>-->
+<!--                    <div id="merch-container" class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3">-->
+<!--                      <div class="relative">-->
+<!--                        <img src="o_combo.JPG" />-->
+<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hat Orange</strong><br />£12 / 500 UAH</div>-->
+<!--                      </div>-->
+<!--                      <div class="relative">-->
+<!--                        <img src="o_tee.JPG" />-->
+<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Tee Orange</strong><br />£19 / 800 UAH</div>-->
+<!--                      </div>-->
+<!--                      <div class="relative">-->
+<!--                        <img src="o_hood.JPG" />-->
+<!--                        <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPDFO! Hoodie Orange</strong><br />£29 / 1250 UAH</div>-->
+<!--                      </div>-->
+<!--                      <div class="relative">-->
+<!--                        <img src="b_hat.JPG" />-->
+<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hat Black</strong><br />£17.50 / 750 UAH</div>-->
+<!--                      </div>-->
+<!--                      <div class="relative">-->
+<!--                        <img src="b_tee.JPG" />-->
+<!--                        <div class="bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Tee Black</strong><br />£23 / 1000 UAH</div>-->
+<!--                      </div>-->
+<!--                      <div class="relative">-->
+<!--                        <img src="b_combo.JPG" />-->
+<!--                        <div class=" bg-[rgba(47,65,91,0.8)] text-center text-hat p-2 pb-5 leading-6"><strong>#VPHFO! Hoodie Black</strong><br />£35 / 1500 UAH</div>-->
+<!--                      </div>-->
+<!--                    </div>-->
 
         <h1 class="relative text-6xl font-extrabold mt-10 font-staat tracking-wide -skew-y-2 text-center md:text-left md:-left-5 mb-8">
             Charities
